--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Spotify</title>
 </head>
 <body>
+    <div class="container">
+        <div class="left">
+            <div class="home">
+                <ul>
+                    <li class="invert"><img src="./svg/logo.svg" alt="logo"></li>
+                    <li class="invert"><img src="./svg/home.svg" alt="home"> Home</li>
+                    <li class="invert"><img src="./svg/search.svg" alt="search"> Search</li>
+                </ul>
+
+
+
+            </div>
+            <div class="library"></div>
+
+
+        </div>
+        <div class="right"></div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
