--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
     <title>Spotify</title>
 </head>
 <body>
-    <div class="container">
-        <div class="left">
-            <div class="home">
-                <ul>
-                    <li class="invert"><img src="./svg/logo.svg" alt="logo"></li>
-                    <li class="invert"><img src="./svg/home.svg" alt="home"> Home</li>
-                    <li class="invert"><img src="./svg/search.svg" alt="search"> Search</li>
-                </ul>
-
-
-
-            </div>
-            <div class="library"></div>
-
-
+  <div class="container">
+    <div class="left">
+        <div class="home">
+            <div class="logo"><img class="invert" src="./svg/logo.svg" alt="logo"></div>
+            <ul>
+                <li><img class="invert" src="./svg/home.svg" alt="Home">Home</li>
+                <li><img class="invert" src="./svg/search.svg" alt="Search">Search</li>
+            </ul>
         </div>
-        <div class="right"></div>
+        <div class="library"></div>
     </div>
-    
+    <div class="right">Lorem ipsum dolor sit amet.</div>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
