--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                 <li><img class="invert" src="./svg/search.svg" alt="Search">Search</li>
             </ul>
         </div>
-        <div class="library"></div>
+        <div class="library">
+            <div class="heading">
+                <img class="invert" src="./svg/playlist.svg" alt="">
+                 <h2>Your Library</h2>
+            </div>
+           
+         
+        </div>
     </div>
     <div class="right">Lorem ipsum dolor sit amet.</div>
   </div>
