update css code

--- a/index.html
+++ b/index.html
@@ -21,11 +21,164 @@
                 <img class="invert" src="./svg/playlist.svg" alt="">
                  <h2>Your Library</h2>
             </div>
-           
-         
+              <div class="footer">
+                        <div><a href="https://www.spotify.com/in-en/legal/"><span>Legal</span></a></div>
+                        <div><a href="https://www.spotify.com/in-en/safetyandprivacy/"><span>Privacy Center</span></a></div>
+                        <div><a href="https://www.spotify.com/in-en/legal/privacy-policy/"><span>Privacy Policy</span></a></div>
+                        <div><a href="https://www.spotify.com/in-en/legal/cookies-policy/"><span>Cookies</span></a></div>
+                        <div><a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3"><span>About Ads</span></a></div>
+                        <div><a href="https://www.spotify.com/in-en/accessibility/"><span>Accessibility</span></a></div>
+        </div>
         </div>
     </div>
-    <div class="right">Lorem ipsum dolor sit amet.</div>
+    <div class="right">
+<div class="header">
+   <div class="nav">
+     <img class="invert" src="./svg/left.svg" alt="left arrow">
+    <img class="invert" src="./svg/right.svg" alt="left arrow">
+   </div>
+   <div class="buttons">
+    <button class="Sign_up" type="submit">Sign up</button>
+  <button class="Log_in" type="submit">Log in</button>
+   </div>
+</div>
+<div class="spotify_playlist">
+    <h1>Spotify Playlist</h1>
+    <div class="card_container">
+    <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div> <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+            <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+        </div>
+    </div>
+</div>
+    </div>
   </div>
     <script src="script.js"></script>
 </body>
