some changes in css code to make it responsive

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="right">
 <div class="header">
    <div class="nav">
-     <img class="invert" src="./svg/left.svg" alt="left arrow">
-    <img class="invert" src="./svg/right.svg" alt="left arrow">
+     <img class="invert navs" src="./svg/left.svg" alt="left arrow">
+    <img class="invert navs" src="./svg/right.svg" alt="left arrow">
    </div>
    <div class="buttons">
     <button class="Sign_up" type="submit">Sign up</button>
