update js code to get songs and add some songs files  too

--- a/index.html
+++ b/index.html
@@ -50,132 +50,44 @@
              <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
             <h2>Sahiba</h2>
             <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
+         </div>
+                 <div class="cards">
             <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
              <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
             <h2>Sahiba</h2>
             <p>Aditya Riharika</p>
         </div>
-            <div class="cards">
+        <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+         </div>
+                 <div class="cards">
             <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
              <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
             <h2>Sahiba</h2>
             <p>Aditya Riharika</p>
         </div>
-            <div class="cards">
+           <div class="cards">
             <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
              <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
             <h2>Sahiba</h2>
             <p>Aditya Riharika</p>
         </div>
-         <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
+    </div>
+    <div class="playbar">
+        <div class="songinfo">
+
         </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-         <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-         <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div> <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-         <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
-            <div class="cards">
-            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
-             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
-            <h2>Sahiba</h2>
-            <p>Aditya Riharika</p>
-        </div>
+            <div class="songsbutton">
+                <img src="./svg/prevsong.svg" alt="">
+                <img src="./svg/play.svg" alt="">
+                <img src="./svg/nextsong.svg" alt="">
+            </div>
+<div class="songtime">
+
+</div>
     </div>
 </div>
     </div>
