add some styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./svg/spotify_logo.png" type="image/x-icon">
     <title>Spotify</title>
 </head>
 <body>
@@ -20,6 +21,12 @@
             <div class="heading">
                 <img class="invert" src="./svg/playlist.svg" alt="">
                  <h2>Your Library</h2>
+            </div>
+
+            <div class="song_list">
+                <ul>
+               
+                </ul>
             </div>
               <div class="footer">
                         <div><a href="https://www.spotify.com/in-en/legal/"><span>Legal</span></a></div>
@@ -76,11 +83,12 @@
             <p>Aditya Riharika</p>
         </div>
     </div>
-    <div class="playbar">
-        <div class="songinfo">
-
+    <div class="playbar ">
+        <div class="seekbar ">
+            <div class="circle "></div>
         </div>
-            <div class="songsbutton">
+        <div class="songinfo"></div>
+            <div class="songsbutton invert ">
                 <img src="./svg/prevsong.svg" alt="">
                 <img src="./svg/play.svg" alt="">
                 <img src="./svg/nextsong.svg" alt="">
