add play pause feature and styling

--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
             <h2>Sahiba</h2>
             <p>Aditya Riharika</p>
          </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+         </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+         </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+         </div>
+         <div class="cards">
+            <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
+             <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
+            <h2>Sahiba</h2>
+            <p>Aditya Riharika</p>
+         </div>
                  <div class="cards">
             <div class="play_button"><img src="./svg/play-button.png" alt=""></div>
              <img  src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" alt="img">
@@ -87,15 +111,19 @@
         <div class="seekbar ">
             <div class="circle "></div>
         </div>
-        <div class="songinfo"></div>
+      <div class="song_info">
+ <div class="song_name">Song Name</div>
             <div class="songsbutton invert ">
-                <img src="./svg/prevsong.svg" alt="">
-                <img src="./svg/play.svg" alt="">
-                <img src="./svg/nextsong.svg" alt="">
+                <img id="previous" src="./svg/prevsong.svg" alt="">
+                <img id="play" src="./svg/play.svg" alt="">
+                <img id="next" src="./svg/nextsong.svg" alt="">
             </div>
+            
 <div class="songtime">
-
+00:00/00:00
 </div>
+      </div>
+       
     </div>
 </div>
     </div>
