add hamburger and close icon ,feature

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <div class="container">
     <div class="left">
         <div class="home">
-            <div class="logo"><img class="invert" src="./svg/logo.svg" alt="logo"></div>
+            <div class="close-logo">
+ <div class="logo"><img class="invert" src="./svg/logo.svg" alt="logo"></div>
+            <div class="close"><img class="invert" src="./svg/close.svg" alt="close"></div>
+            </div>
+           
             <ul>
                 <li><img class="invert" src="./svg/home.svg" alt="Home">Home</li>
                 <li><img class="invert" src="./svg/search.svg" alt="Search">Search</li>
@@ -25,7 +29,6 @@
 
             <div class="song_list">
                 <ul>
-               
                 </ul>
             </div>
               <div class="footer">
@@ -41,6 +44,7 @@
     <div class="right">
 <div class="header">
    <div class="nav">
+    <img class="invert hamburger" src="./svg/hamburger.svg" alt="hamburger">
      <img class="invert navs" src="./svg/left.svg" alt="left arrow">
     <img class="invert navs" src="./svg/right.svg" alt="left arrow">
    </div>
